Aggiorna le traduzioni per il termine "shop" in diverse lingue

--- a/translations/internal/de.json
+++ b/translations/internal/de.json
@@ -400,7 +400,7 @@
         "fastest_answer": "am schnellsten!",
         "streak": "{} in Folge!"
       },
-      "shop": "Shop",
+      "shop": "Kaufen",
       "buyPower": "tippen zum Shoppen"
     },
     "rejoinGame": {
