--- a/translations/internal/es.json
+++ b/translations/internal/es.json
@@ -400,7 +400,7 @@
         "fastest_answer": "¡el más rápido!",
         "streak": "¡{} seguidas!"
       },
-      "shop": "Tienda",
+      "shop": "Compra",
       "buyPower": "toca para comprar"
     },
     "rejoinGame": {
