--- a/translations/internal/fr.json
+++ b/translations/internal/fr.json
@@ -400,7 +400,7 @@
         "fastest_answer": "le plus rapide !",
         "streak": "{} d'affilée !"
       },
-      "shop": "Boutique",
+      "shop": "Achetez",
       "buyPower": "appuyer pour acheter"
     },
     "rejoinGame": {
