--- a/translations/internal/it.json
+++ b/translations/internal/it.json
@@ -400,7 +400,7 @@
         "fastest_answer": "più veloce!",
         "streak": "{} di fila!"
       },
-      "shop": "Negozio",
+      "shop": "Compra",
       "buyPower": "tocca per acquistare"
     },
     "rejoinGame": {
