--- a/translations/internal/pt.json
+++ b/translations/internal/pt.json
@@ -400,7 +400,7 @@
         "fastest_answer": "mais rápido!",
         "streak": "{} seguidas!"
       },
-      "shop": "Loja",
+      "shop": "Compre",
       "buyPower": "toque para comprar"
     },
     "rejoinGame": {
